--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,12 @@
+@font-face {
+    font-family: 'Poppins';
+    src: url('https://fonts.googleapis.com/css2?family=Poppins&display=swap') format(ttf);
+}
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.App {
+    font-family: 'Poppins';
+}
